--- a/css/involved_style.css
+++ b/css/involved_style.css
@@ -1,10 +1,14 @@
 /* WEBPAGE VIEW */
 @media screen and (max-width: 1920px){
   /* navigation stuff */
-  /* .skip a{
+  .skip a{
     position: absolute;
     top: -40px;
-  } */
+  }
+  
+  .skip a:focus{
+    top: 20px;
+  }
 
     ul {
     list-style-type: none;
