--- a/css/REDOinvolved_style.css
+++ b/css/REDOinvolved_style.css
@@ -12,7 +12,6 @@
 }
 
 body {
-  background-image: url("../images/vt2.JPG");
   background-color: #F5E7A6;
   margin: 0px;
   color: white;
@@ -62,34 +61,35 @@ li a:hover {
   font-family: Poppins-bolditalic, sans-serif;
 }
 
-h1{
-  font-family: Poppins-bolditalic, sans-serif;
-  font-size: 25px;
-}
-
-/* flex text */
-.container{
-  display: flex;
-  font-family: Poppins-bold, sans-serif;
-  flex-direction: column;
+ /* form & tinkered toy box photo */
+ .grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto auto auto;
 }
 
 .grid-item1{
-  background-color: #3689bc;
-  border-radius: 25px;
+  grid-area: 2/2/3/3;
+  font-family: Poppins-bold, sans-serif;
   color: white;
-  padding: 40px 40px 40px 40px;
-  font-size: 14px;
-  margin: 10%;
+  font-size: 16px;
+  text-align: center;
+  border-radius: 25px;
+  background-color:#284C81;
+  padding: 30px;
+  margin: 20px;
 }
 
 .grid-item2{
-  background-color: #3689bc;
-  border-radius: 25px;
-  color: white;
-  padding: 40px 40px 40px 40px;
-  font-size: 14px;
-  margin: 10%;
+  display: none;
+}
+
+h1{
+  font-family: Poppins-bolditalic, sans-serif;
+  font-size: 30px;
+  color: #284C81;
+  margin: 0px 20px 20px 20px;
+  text-align: center;
 }
 
 /* TABLET VIEW */
@@ -110,14 +110,6 @@ li img{
   padding: 20px 0px 0px 20px;
 }
 
-.grid-item1{
-  margin: 5% 5% 2% 5%;
-}
-
-.grid-item2{
-  margin: 2% 5% 5% 5%;
-}
-
 /* WEBPAGE VIEW */
 @media screen and (min-width: 1024px){
   ul {
@@ -136,17 +128,5 @@ li img{
 
   li img{
     width: 50%;
-  }
-
-  h1{
-    font-size: 40px;
-  }
-
-  .grid-item1{
-    font-size: 30px;
-  }
-  
-  .grid-item2{
-    font-size: 30px;
   }
 }
