--- a/css/homepage_style.css
+++ b/css/homepage_style.css
@@ -1,7 +1,8 @@
-/* WEBPAGE VIEW */
-@media screen and (max-width: 1920px){
-/* navigation stuff */
+/* MOBILE VIEW */
+/* navigation */
 .skip a{
+  font-family: Poppins-bolditalic, sans-serif;
+  background-color: white;  
   position: absolute;
   top: -40px;
 }
@@ -10,30 +11,44 @@
   top: 20px;
 }
 
-  ul {
+body{
+  margin: 0px;
+  background-color: #284C81;
+}
+
+ul {
+  font-family: Poppins-bold, sans-serif;
+  font-size: 12px;
+  background-color: #284C81;
   list-style-type: none;
   margin: 0;
-  padding: 45px 0px 0px 25px;
+  padding: 0px;
+  padding-bottom: 15px;
   overflow: hidden;
-  background-color: #284C81;
-  font-size: 25px;
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 
-li {
-  float: right;
-}
-
-ul img{
-  padding-bottom: 10px;
+li{
+  align-content: center;
 }
 
 li a {
-  font-family: Poppins-bold, sans-serif;
-  display: block;
+  display: inline-block;
+  width: 100px;
   color: white;
   text-align: center;
-  padding: 14px 16px;
+  /* padding: 10px; */
   text-decoration: none;
+  /* border: solid 1px white; */
+}
+
+li img{
+  align-items: center;
+  padding: 10px;
+  width: 95%;
 }
 
 li a:hover {
@@ -42,91 +57,117 @@ li a:hover {
 
 .active {
   text-decoration: underline;
+  font-family: Poppins-bolditalic, sans-serif;
 }
 
-body{
-  background-color: #F5E7A6;
-  font-family: Poppins, sans-serif;
+/* banner image */
+.main{
+  width: 100%;
 }
 
-/* description & redbull image*/
+/* first container */
 .grid-container1 {
   display: grid;
-  grid-template-columns: 10% 40% 10% 30% 10% ;
-  grid-template-rows: 20% 60% 20%;
-  background-color: #3a87b7;
+  grid-template-columns: 100%;
+  grid-template-rows: auto auto;
+  background-color: #3689bc;
   font-family: Poppins-bold, sans-serif;
   color: white;
-  font-size: 30px;
-  align-items: center;
-  padding: 40px 0px 40px 0px;  
+  font-size: 15px;
+  text-align: center;
+  padding: 40px;  
 }
 
 .grid1-item1{
-  grid-area: 2/2/3/3;
+  grid-area: 1/1/2/2;
+  padding-bottom: 20px;
 }
 
 .grid1-item2{
-  grid-area: 2/4/3/5;
+  grid-area: 2/1/3/1;
 }
 
+/* FTLV */
 h1{
   font-family: Poppins-bolditalic, sans-serif;
-  font-size: 70px;
+  background-color: #F5E7A6;
+  font-size: 200%;
   color: #284C81;
-  padding-left: 25px;
+  padding: 15px;
+  margin: 0px;
+  text-align: center;
 }
 
-/* bottom photo collage homepage */
+/* second container */
 .grid-container2 {
   display: grid;
-  grid-template-columns: auto auto auto auto auto;
-  grid-template-rows: auto auto;
-}
-
-.grid2-item1{
-  grid-area: 1/1/3/3;
-}
-
-.grid2-item2{
-  grid-area: 1/3/2/4;
-}
-
-.grid2-item3{
-  grid-area: 1/4/2/5;
-}
-
-.grid2-item4{
-  grid-area: 1/5/2/6;
-}
-
-.grid2-item5{
-  grid-area: 2/3/3/4;
-}
-
-.grid2-item6{
-  grid-area: 2/4/3/5;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 20% 20% 20% 20% 20%;
+  margin: 0px;
+  gap: 0px;
+  padding: 0px;
 }
 
 .grid2-item7{
-  grid-area: 2/5/3/6;
+  grid-area: 1/1/2/2;
 }
 
-footer{
+.grid2-item2{
+  grid-area: 1/2/2/3;
+}
+
+.grid2-item3{
+  grid-area: 2/1/3/2;
+}
+
+.grid2-item4{
+  grid-area: 2/2/3/3;
+}
+
+.grid2-item5{
+  grid-area: 3/1/4/2;
+}
+
+.grid2-item6{
+  grid-area: 3/2/4/3;
+}
+
+.grid2-item1{
+  grid-area: 4/1/6/3;
+}
+
+.grid2-item8{
+  display: none;
+}
+
+/* footer{
   display: flex;
   justify-content: center;
   background-color:#3a87b7;
   padding: 40px;
-}
-
-
+} */
 
 
 
 /* TABLET VIEW */
-@media screen and (max-width: 1320px){
+@media screen and (min-width: 820px){
 
-/* description & redbull image*/
+ul {
+  font-size: 15px;
+  padding-bottom: 15px;
+  display: flex;
+  justify-content: flex-end;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: flex-end;
+}
+
+li img{
+  width: 60%;
+  padding: 20px 0px 0px 20px;
+}
+
+/* first container */
 .grid-container1 {
   display: grid;
   grid-template-columns: 10% 40% 10% 30% 10% ;
@@ -134,7 +175,7 @@ footer{
   background-color: #3a87b7;
   font-family: Poppins-bold, sans-serif;
   color: white;
-  font-size: 30px;
+  font-size: 20px;
   align-items: center;
   padding: 40px 0px 40px 0px; 
   overflow: hidden; 
@@ -145,13 +186,100 @@ footer{
 }
 
 .grid1-item2{
+  width: 190%;
+  grid-area: 2/4/3/5;
+}
+
+/* FTLV */
+h1{
+  font-size: 300%;
+  text-align: left;
+  padding-left: 60px;
+}
+
+/* second container */
+.grid-container2 {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  grid-template-rows: 50% 50%;
+  margin: 0px;
+  gap: 0px;
+  padding: 0px;
+}
+
+.grid2-item7{
+  grid-area: 1/1/2/2;
+}
+
+.grid2-item2{
+  grid-area: 1/2/2/3;
+}
+
+.grid2-item3{
+  grid-area: 1/3/2/4;
+}
+
+.grid2-item4{
+  grid-area: 1/4/2/5;
+}
+
+.grid2-item5{
+  grid-area: 2/1/3/2;
+}
+
+.grid2-item6{
+  grid-area: 2/2/3/3;
+}
+
+.grid2-item1{
+  grid-area: 2/3/3/4;
+}
+
+.grid2-item8{
+  display: grid;
+  grid-area: 2/4/3/5;
+}
+
+}
+
+/* WEBPAGE VIEW */
+@media screen and (min-width: 1024px){
+  ul {
+    font-size: 25px;
+    align-content: center;
+  }
+
+  li{
+    padding-top: 20px;
+    padding-left: 10px;
+  }
+
+  li a{
+    width: 150px
+  }
+
+  li img{
+    width: 50%;
+  }
+
+  /* description & redbull image*/
+.grid-container1 {
+  display: grid;
+  grid-template-columns: 10% 40% 10% 30% 10% ;
+  grid-template-rows: 20% 60% 20%;
+}
+
+.grid1-item1{
+  grid-area: 2/2/3/3;
+}
+
+.grid1-item2{
+  width: 120%;
   grid-area: 2/4/3/5;
 }
 
 h1{
-  font-family: Poppins-bolditalic, sans-serif;
   font-size: 70px;
-  color: #284C81;
   padding-left: 25px;
 }
 
@@ -164,7 +292,6 @@ h1{
 
 .grid2-item1{
   grid-area: 1/1/3/3;
-  overflow: scroll;
 }
 
 .grid2-item2{
@@ -191,127 +318,7 @@ h1{
   grid-area: 2/5/3/6;
 }
 
-h1{
-  font-family: Poppins-bolditalic, sans-serif;
-  font-size: 70px;
-  color: #284C81;
-  padding-left: 25px;
-  overflow: scroll;
+.grid2-item8{
+  display: none;
 }
-
-
-
-
-
-
-/* MOBILE VIEW */
-@media screen and (max-width: 896px){
-
-/* description & redbull image*/
-.grid-container1 {
-  display: grid;
-  grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-  grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-  background-color: #3a87b7;
-  font-family: Poppins-bold, sans-serif;
-  color: white;
-  font-size: 18px;
-  align-items: center;
-  padding: 0px 0px 130px 0px;  
-  text-align: center;
 }
-
-.grid1-item1{
-  grid-area: 1/2/7/10;
-}
-
-.grid1-item2{
-  grid-area: 8/2/11/10;
-}
-
-h1{
-  font-family: Poppins-bolditalic, sans-serif;
-  font-size: 40px;
-  color: #284C81;
-  padding-left: 25px;
-}
-
-  /* bottom photo collage homepage */
-.grid-container2 {
-  display: grid;
-  grid-template-columns: auto auto;
-  grid-template-rows: auto auto auto auto auto;
-}
-
-.grid2-item1{
-  grid-area: 4/1/4/6;
-}
-
-.grid2-item2{
-  grid-area: 1/1/2/2;
-}
-
-.grid2-item3{
-  grid-area: 1/2/2/3;
-}
-
-.grid2-item4{
-  grid-area: 2/1/3/2;
-}
-
-.grid2-item5{
-  grid-area: 2/2/3/3;
-}
-
-.grid2-item6{
-  grid-area: 3/1/4/2;
-}
-
-.grid2-item7{
-  grid-area: 3/2/4/3;
-}
-
-h1{
-  font-family: Poppins-bolditalic, sans-serif;
-  font-size: 70px;
-  color: #284C81;
-  padding-left: 25px;
-  overflow: scroll;
-}
-
-ul {
-  list-style-type: none;
-  margin: 0px;
-  padding: 0px;
-  overflow: hidden;
-  background-color: #284C81;
-  font-size: 15px;
-}
-
-li {
-  float: right;
-}
-
-ul img{
-  padding-bottom: 30px;
-}
-
-li a {
-  display: flex;
-  font-family: Poppins-bold, sans-serif;
-  display: inline;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
-
-li a:hover {
-  text-decoration: underline;
-}
-
-.active {
-  text-decoration: underline;
-}
-
-}}}
