--- a/css/aboutus_style.css
+++ b/css/aboutus_style.css
@@ -1,5 +1,5 @@
 /* MOBILE VIEW */
-/* navigation */
+/* navigation */ 
 .skip a{
   font-family: Poppins-bolditalic, sans-serif;
   background-color: white;  
@@ -19,22 +19,18 @@ body {
  }
 
 ul {
-  font-family: Poppins-bold, sans-serif;
-  font-size: 12px;
-  background-color: #284C81;
-  list-style-type: none;
-  margin: 0;
-  padding: 0px;
-  padding-bottom: 15px;
-  overflow: hidden;
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-}
-
-li{
-  align-content: center;
+font-family: Poppins-bold, sans-serif;
+font-size: 100%;
+background-color: #284C81;
+list-style-type: none;
+margin: 0;
+padding: 0px;
+padding-bottom: 15px;
+overflow: hidden;
+width: 100%;
+display: flex;
+flex-wrap: wrap;
+justify-content: center;
 }
 
 li a {
@@ -48,7 +44,7 @@ li a {
 }
 
 li img{
-  align-items: center;
+  margin: 0px;
   padding: 10px;
   width: 95%;
 }
@@ -79,7 +75,6 @@ h1{
   border-radius: 25px;
   color: white;
   padding: 40px 40px 40px 40px;
-  font-size: 14px;
   margin: 10%;
 }
 
@@ -88,8 +83,18 @@ h1{
   border-radius: 25px;
   color: white;
   padding: 40px 40px 40px 40px;
-  font-size: 14px;
   margin: 10%;
+}
+
+footer{
+  display: flex;
+  align-items: center;
+  background-color: #284C81;
+}
+
+footer a{
+  display: flex;
+  justify-content: center;
 }
 
 /* TABLET VIEW */
@@ -110,12 +115,16 @@ li img{
   padding: 20px 0px 0px 20px;
 }
 
-.grid-item1{
+.grid-item1{ 
   margin: 5% 5% 2% 5%;
 }
 
 .grid-item2{
   margin: 2% 5% 5% 5%;
+}
+
+footer{
+  justify-content: center;
 }
 
 /* WEBPAGE VIEW */
@@ -139,14 +148,27 @@ li img{
   }
 
   h1{
-    font-size: 40px;
+    font-size: 30px;
+  }
+
+  .container{
+    display: flex;
+    font-family: Poppins-bold, sans-serif;
+    flex-direction: column;
   }
 
   .grid-item1{
-    font-size: 30px;
+    font-size: 130%;
+    margin: 5% 15% 0% 15%;
   }
   
   .grid-item2{
-    font-size: 30px;
+    font-size: 130%;
+    margin: 3% 15% 5% 15%;
   }
+
+  .background2{
+    padding: 0%;
+  }
+
 }
