--- a/css/homepage_style.css
+++ b/css/homepage_style.css
@@ -30,7 +30,7 @@ ul {
   flex-wrap: wrap;
   justify-content: center;
 }
-
+ 
 li{
   align-content: center;
 }
@@ -80,7 +80,6 @@ li a:hover {
 
 .grid1-item1{
   grid-area: 1/1/2/2;
-  padding-bottom: 20px;
 }
 
 .grid1-item2{
@@ -140,12 +139,15 @@ h1{
   display: none;
 }
 
-/* footer{
+footer{
+  display: flex;
+  align-items: center;
+}
+
+footer a{
   display: flex;
   justify-content: center;
-  background-color:#3a87b7;
-  padding: 40px;
-} */
+}
 
 
 
@@ -239,6 +241,9 @@ h1{
   display: grid;
   grid-area: 2/4/3/5;
 }
+footer{
+  justify-content: center;
+}
 
 }
 
@@ -265,8 +270,9 @@ h1{
   /* description & redbull image*/
 .grid-container1 {
   display: grid;
-  grid-template-columns: 10% 40% 10% 30% 10% ;
+  grid-template-columns: 10% 42% 8% 30% 10% ;
   grid-template-rows: 20% 60% 20%;
+  font-size: 160%;
 }
 
 .grid1-item1{
