--- a/css/aboutus_style.css
+++ b/css/aboutus_style.css
@@ -15,7 +15,7 @@ body {
   background-image: url("../images/vt2.JPG");
   background-color: #F5E7A6;
   margin: 0px;
-  color: white;
+  color: black;
  }
 
 ul {
@@ -71,7 +71,7 @@ h1{
 }
 
 .grid-item1{
-  background-color: #3689bc;
+  background-color:#284C81;
   border-radius: 25px;
   color: white;
   padding: 40px 40px 40px 40px;
@@ -79,7 +79,7 @@ h1{
 }
 
 .grid-item2{
-  background-color: #3689bc;
+  background-color: #284C81;
   border-radius: 25px;
   color: white;
   padding: 40px 40px 40px 40px;
